Links Stylesheet to HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link href="./stylesheet.css" type="text/css" rel="stylesheet">
     <head>
         <title>Lee Lacey's Portfolio</title>
     </head>
