--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <link href="./stylesheet.css" type="text/css" rel="stylesheet">
+    
     <head>
+        <link href="C:\Users\leela\OneDrive\Documents\Portfolio\Portfolio In Progress" type="text/css" rel="stylesheet">
         <title>Lee Lacey's Portfolio</title>
     </head>
 <body>
