--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <link href="C:\Users\leela\OneDrive\Documents\Portfolio\Portfolio In Progress" type="text/css" rel="stylesheet">
+        <link href="stylesheet.css" type="text/css" rel="stylesheet">
         <title>Lee Lacey's Portfolio</title>
     </head>
 <body>
