--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     
     <head>
         <link href="stylesheet.css" type="text/css" rel="stylesheet">
-        <title>Lee Lacey's Portfolio</title>
+       <div id="title">
+        <title>          
+                Lee Lacey's Portfolio
+            </title>
+       </div>
+        
     </head>
 <body>
     <div id="intro">
