--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <head>
         <link href="stylesheet.css" type="text/css" rel="stylesheet">
        <div id="title">
-        <title>          
-                Lee Lacey's Portfolio
-            </title>
+        <title>Lee Lacey's Portfolio</title>
        </div>
         
     </head>
